force-app/main/default/objects/LAD_Search__c/LAD_Search__c.object-meta.xml
<CustomObject>
    <description>FOUK-9966 : Custom object to show the Advanced Search Order. Based on the search type of Advanced Search component on the site, record gets created.</description>
    <label>Search</label>
    <nameField>
        <displayFormat>SRCH-{000000}</displayFormat>
        <label>Search Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>