force-app/main/default/objects/LAD_Search__c/fields/LAD_Account__c.field-meta.xml
<CustomField>
    <fullName>LAD_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-9966 : Account lookup (assigned to the person who triggered search - can be empty if triggered by Internal Laddaw Portal User)</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Searches</relationshipLabel>
    <relationshipName>Searches</relationshipName>
    <type>Lookup</type>
</CustomField>