force-app/main/default/objects/LAD_Search__c/fields/LAD_Contact__c.field-meta.xml
<CustomField>
    <fullName>LAD_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-9966 : Contact Lookup (assigned to the person who triggered search - can be empty if triggered by Internal Laddaw Portal User)</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Searches</relationshipLabel>
    <relationshipName>Searches</relationshipName>
    <type>Lookup</type>
</CustomField>