force-app/main/default/objects/LAD_Search__c/fields/LAD_Date__c.field-meta.xml
<CustomField>
    <fullName>LAD_Date__c</fullName>
    <description>FOUK-9966 : Date (when the search was triggered)</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>