force-app/main/default/objects/LAD_Search__c/recordTypes/LAD_DVLA_Search.recordType-meta.xml
<RecordType>
    <fullName>LAD_DVLA_Search</fullName>
    <active>true</active>
    <description>FOUK-9966 : Record of DVLA search type</description>
    <label>DVLA Search</label>
</RecordType>