force-app/main/default/objects/LAD_Search__c/recordTypes/LAD_Vehicle_Characteristics_Search.recordType-meta.xml
<RecordType>
    <fullName>LAD_Vehicle_Characteristics_Search</fullName>
    <active>true</active>
    <description>FOUK-9966 : Record of Make Model Year search type</description>
    <label>Vehicle Characteristics Search</label>
</RecordType>