force-app/main/default/objects/LAD_Search__c/listViews/All_Searches.listView-meta.xml
<ListView>
    <fullName>All_Searches</fullName>
    <columns>NAME</columns>
    <columns>LAD_Account__c</columns>
    <columns>LAD_Contact__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Searches</label>
</ListView>